paid/force-app/main/default/objects/PAID_Contact_Field_Mapping__mdt/PAID_Contact_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Defines field mappings between Salesforce Contact and PAID Contact API</description>
    <label>PAID Contact Field Mapping</label>
    <pluralLabel>PAID Contact Field Mappings</pluralLabel>
</CustomObject>