paid/force-app/main/default/objects/PAID_Contact_Field_Mapping__mdt/fields/Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field__c</fullName>
    <description>Parent field name for nested objects (e.g., mailingAddress)</description>
    <label>Parent Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>